--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,26 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Log-Message
-version:      0.02
-version_from: lib/Log/Message.pm
-installdirs:  site
+--- #YAML:1.0
+name:               Log-Message
+version:            0.04
+abstract:           Powerful and flexible message logging mechanism
+author:
+    - Jos Boumans <kane[at]cpan.org>
+license:            unknown
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
 requires:
-    File::Spec:                    0
-    Locale::Maketext::Simple:      0
-    Module::Load:                  0
-    Params::Check:                 0
-    Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30
+    File::Spec:           0
+    Locale::Maketext::Simple:  0
+    Module::Load:         0
+    Params::Check:        0
+    Test::More:           0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
+meta-spec:
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
