Import of BINGOS/Log-Message-0.06 from CPAN.
gitpan-cpan-distribution: Log-Message
gitpan-cpan-version:      0.06
gitpan-cpan-path:         BINGOS/Log-Message-0.06.tar.gz
gitpan-cpan-author:       BINGOS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,29 @@
---- #YAML:1.0
-name:               Log-Message
-version:            0.04
-abstract:           Powerful and flexible message logging mechanism
+---
+abstract: 'Powerful and flexible message logging mechanism'
 author:
-    - Jos Boumans <kane[at]cpan.org>
-license:            unknown
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Jos Boumans <kane[at]cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    File::Spec:           0
-    Locale::Maketext::Simple:  0
-    Module::Load:         0
-    Params::Check:        0
-    Test::More:           0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.64, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Log-Message
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  File::Spec: 0
+  Locale::Maketext::Simple: 0
+  Module::Load: 0
+  Params::Check: 0
+  Test::More: 0
+  if: 0
+resources:
+  repository: git://github.com/jib/log-message.git
+version: 0.06
